@@ -45,8 +45,6 @@
 
 #include <boost/graph/graphviz.hpp>
 
-#include "SDCCtree_dec.hpp"
-
 extern "C"
 {
 #include "SDCCsymt.h"
@@ -130,7 +128,9 @@ struct tree_dec_naddr_node
 };
 
 typedef boost::adjacency_list<boost::vecS, boost::vecS, boost::bidirectionalS, cfg_naddr_node, float> cfg_t; // The edge property is the cost of subdividing the edge and inserting a bank switching instruction.
-typedef boost::adjacency_list<boost::vecS, boost::vecS, boost::bidirectionalS, tree_dec_naddr_node> tree_dec_naddr_t;
+typedef boost::adjacency_list<boost::vecS, boost::vecS, boost::bidirectionalS, tree_dec_naddr_node> tree_dec_t;
+
+#include "SDCCtree_dec.hpp"
 
 // Annotate nodes of the control flow graph with the set of possible named address spaces active there.
 void annotate_cfg_naddr(cfg_t &cfg, std::map<naddrspace_t, const symbol *> &addrspaces)
@@ -488,7 +488,7 @@ void dump_cfg_naddr(const cfg_t &cfg)
 }
 
 // Dump tree decomposition, show bag and live variables at each node.
-static void dump_tree_decomposition_naddr(const tree_dec_naddr_t &tree_dec)
+static void dump_tree_decomposition_naddr(const tree_dec_t &tree_dec)
 {
   std::ofstream dump_file((std::string(dstFileName) + ".dumpnaddrdec" + currFunc->rname + ".dot").c_str());
 
